[package]
name            = "cw-iper-test"
version         = "0.1.0"
authors         = ["Rhaki"]
description     = "Implementation of cw-multi-test enabling multi ibc chains enviroment"
license         = "Apache-2.0"
edition         = "2021"

[dependencies]
anyhow          = "1.0.82"
cosmwasm-std    = { version = "2.0.0", features = ["iterator", "staking", "stargate"] }
cosmwasm-schema = "2.0.0"
cw-multi-test   = {path = "../rhaki-cw-multi-test"}
cw-storage-plus = "2.0.0"
serde           = "1.0.197"
thiserror       = "1.0.58"
