[workspace]
members             = [
                        "cw-iper-test",
                        "cw-iper-test-macros",
                        "examples"
                    ]

[workspace.package]
version             = "0.1.0"
authors             = ["Rhaki"]
license             = "Apache-2.0"
edition             = "2021"

[workspace.dependencies]
anyhow              = "1.0.82"
bech32              = "0.11.0"
cosmwasm-std        = { version = "2.0.0", features = ["iterator", "staking", "stargate"] }
cosmwasm-schema     = "2.0.0"
cw-multi-test       = { package = "rhaki-cw-multi-test", version = "2.0.0"}
cw-storage-plus     = "2.0.0"
serde               = "1.0.197"
thiserror           = "1.0.58"
ibc                 = "0.51.0"
ibc-proto           = "0.42.2"
cw-iper-test        = { path = "cw-iper-test" }
cw-iper-test-macros = { path = "cw-iper-test-macros"}
sha2                = "0.10.8"
strum               = "0.26.1"
strum_macros        = "0.26"
prost               = "0.12.4"
serde_json          = "1.0.68"