[package]
name    = "cw-iper-test-macros"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
proc-macro2     = "1"
quote           = "1"
syn             = { version = "2.0.59", features = ["full", "printing", "extra-traits"] }

[features]
internal        = []

[lib]
proc-macro      = true