[package]
name         = "cw-iper-test-macros"
description  = "Macros for the cw-iper-test crate"
license      = { workspace = true }
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }

[features]
default      = []
internal     = []

[lib]
proc-macro   = true

[dependencies]
proc-macro2  = "1"
quote        = "1"
syn          = { version = "2.0.59", features = ["full", "printing", "extra-traits"] }

